# mice-imputation-psci

./: .gitattributes  .gitignore  pyproject.toml  readme.md
assets/: references.bib  requirements.txt
code/: anes_cleaning.py  anes_imputation.R  anes_models.r  dcr_rf_imputation_draft_spring_2023.qmd  fun.R  fun.py  helper.R  helper.py  imputation_with_random_forests_anon.qmd  introduce_mar.R  mermaid_code.qmd  ols.rds  ols.stan  produce_na.py  simulated_imputation.R  simulated_models.R  simulation_data.R
drafts/: dcr_rf_imputation_draft_fall_2022.qmd
src/: 2022_ces_cleaning.R  DESCRIPTION  NAMESPACE  dcr_rf_imputation_draft_spring_2023.qmd  imputation_with_random_forests_anon.qmd  possible_applied_section.qmd  rf_imputation_su2023.qmd  si_imputation_with_random_forests.qmd  test.db.wal
src/PY/: helper.py
src/R/: complete_data.R  discrepancy.R  discrepancy.r  impute.R  organize_data.R  sim_ridgeline.R  simulate.R
src/STAN/: ols.stan
src/_extensions/andrewheiss/hikmah/: _extension.yml  include-in-header.tex
src/_extensions/andrewheiss/hikmah/partials/: before-body.tex  title.tex
src/man/: discrepancy.Rd  dot-complete_data.Rd  impute.Rd  sim_ridgeline.Rd  simulate.Rd
tests/: test_discrepancy.R  test_impute.R  test_simulate.R
