[tool.poetry]
name = "dcr-rf-imputation"
version = "0.1.0"
description = "Academic project examining the use of ensemble models for imputation"
authors = ["Damon C. Roberts <damon.charles.roberts@gmail.com>"]
readme = "README.md"
packages = [{include = "dcr_rf_imputation"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
duckdb = "^0.7.1"
miceforest = "^5.6.3"
polars = "^0.16.9"
plotly = "^5.13.1"
networkx = "^3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
